add accept header

--- a/demo-ui/app/uk/gov/ons/addressIndex/demoui/views/main.scala.html
+++ b/demo-ui/app/uk/gov/ons/addressIndex/demoui/views/main.scala.html
@@ -132,6 +132,7 @@
           url: url,
           dataType: 'json',
           headers: {
+           "Accept": "*/*",
            "Authorization": apiKey
           }
         })
